--- a/bowsong0810botsso/appsettings.json
+++ b/bowsong0810botsso/appsettings.json
@@ -8,5 +8,17 @@
   },
   "AllowedHosts": "*",
   "BOT_ID": "$botId$",
-  "BOT_PASSWORD": "$bot-password$"
+  "BOT_PASSWORD": "$bot-password$",
+  "TeamsFx": {
+    "Authentication": {
+      "ClientId": "$clientId$",
+      "ClientSecret": "$client-secret$",
+      "OAuthAuthority": "$oauthAuthority$",
+      "TenantId": "$tenantId$",
+      "ApplicationIdUri": "$applicationIdUri$",
+      "Bot": {
+        "InitiateLoginEndpoint": "$initiateLoginEndpoint$"
+      }
+    }
+  }
 }
